--- a/pom.xml
+++ b/pom.xml
@@ -216,6 +216,11 @@
                 </goals>
                 <configuration>
                   <rules>
+                    <requireJavaVersion>
+                      <!-- Enforce JDK 1.7 (and not 1.8+) for compilation. -->
+                      <!-- See: https://github.com/netty/netty/issues/3548 -->
+                      <version>[1.7.0, 1.8.0)</version>
+                    </requireJavaVersion>
                     <requireProperty>
                       <regexMessage>
                         Release process must be performed on linux-x86_64.
@@ -833,8 +838,8 @@
             <configuration>
               <rules>
                 <requireJavaVersion>
-                  <!-- Enforce java 1.7 as minimum for compiling -->
-                  <!-- This is needed because of java.util.zip.Deflater and NIO UDP multicast-->
+                  <!-- Enforce JDK 1.7+ for compilation. -->
+                  <!-- This is needed because of java.util.zip.Deflater and NIO UDP multicast. -->
                   <version>[1.7.0,)</version>
                 </requireJavaVersion>
                 <requireMavenVersion>
