--- a/common/src/main/templates/io/netty/util/collection/KObjectMap.template
+++ b/common/src/main/templates/io/netty/util/collection/KObjectMap.template
@@ -17,11 +17,11 @@ package io.netty.util.collection;
 import java.util.Collection;
 
 /**
- * Interface for a primitive map that uses {@code int}s as keys.
+ * Interface for a primitive map that uses {@code @k@}s as keys.
  *
  * @param <V> the value type stored in the map.
  */
-public interface IntObjectMap<V> {
+public interface @K@ObjectMap<V> {
 
     /**
      * An Entry in the map.
@@ -32,7 +32,7 @@ public interface IntObjectMap<V> {
         /**
          * Gets the key for this entry.
          */
-        int key();
+        @k@ key();
 
         /**
          * Gets the value for this entry.
@@ -51,7 +51,7 @@ public interface IntObjectMap<V> {
      * @param key the key whose associated value is to be returned.
      * @return the value or {@code null} if the key was not found in the map.
      */
-    V get(int key);
+    V get(@k@ key);
 
     /**
      * Puts the given entry into the map.
@@ -60,12 +60,12 @@ public interface IntObjectMap<V> {
      * @param value the value of the entry.
      * @return the previous value for this key or {@code null} if there was no previous mapping.
      */
-    V put(int key, V value);
+    V put(@k@ key, V value);
 
     /**
      * Puts all of the entries from the given map into this map.
      */
-    void putAll(IntObjectMap<V> sourceMap);
+    void putAll(@K@ObjectMap<V> sourceMap);
 
     /**
      * Removes the entry with the specified key.
@@ -73,7 +73,7 @@ public interface IntObjectMap<V> {
      * @param key the key for the entry to be removed from this map.
      * @return the previous value for the key, or {@code null} if there was no mapping.
      */
-    V remove(int key);
+    V remove(@k@ key);
 
     /**
      * Returns the number of entries contained in this map.
@@ -94,7 +94,7 @@ public interface IntObjectMap<V> {
     /**
      * Indicates whether or not this map contains a value for the specified key.
      */
-    boolean containsKey(int key);
+    boolean containsKey(@k@ key);
 
     /**
      * Indicates whether or not the map contains the specified value.
@@ -109,7 +109,7 @@ public interface IntObjectMap<V> {
     /**
      * Gets the keys contained in this map.
      */
-    int[] keys();
+    @k@[] keys();
 
     /**
      * Gets the values contained in this map.
