--- a/common/pom.xml
+++ b/common/pom.xml
@@ -147,7 +147,7 @@
                                       String keyPrimitive,
                                       String keyObject) {
                   def keyName = keyPrimitive.capitalize()
-                  def replaceFrom = "^(.*)[[a-z]+\\.]*K([A-Za-z]+).template"
+                  def replaceFrom = "^(.*)[[a-z]+\\.]*K([A-Za-z_]+).template"
                   def replaceTo = "\\1" + keyName + "\\2.java"
                   ant.copy(todir: outputDir) {
                     fileset(dir: templateDir) {
