--- a/common/pom.xml
+++ b/common/pom.xml
@@ -64,7 +64,6 @@
 
   <build>
     <plugins>
-
       <!-- Add generated collection sources. -->
       <plugin>
         <groupId>org.codehaus.mojo</groupId>
@@ -134,8 +133,8 @@
                 }
 
                 void convertSources(String templateDir, String outputDir) {
-                  String[] keyPrimitives = ["int", "char"]
-                  String[] keyObjects = ["Integer", "Character"];
+                  String[] keyPrimitives = ["byte", "char", "short", "int", "long"]
+                  String[] keyObjects = ["Byte", "Character", "Short", "Integer", "Long"];
 
                   keyPrimitives.eachWithIndex { keyPrimitive, i ->
                     convertTemplates templateDir, outputDir, keyPrimitive, keyObjects[i]
@@ -147,8 +146,9 @@
                                       String keyPrimitive,
                                       String keyObject) {
                   def keyName = keyPrimitive.capitalize()
-                  def replaceFrom = "^(.*)[[a-z]+\\.]*K([A-Za-z_]+).template"
+                  def replaceFrom = "(^.*)K([^.]+)\\.template\$"
                   def replaceTo = "\\1" + keyName + "\\2.java"
+                  def hashCodeFn = keyPrimitive.equals("long") ? "(int)(key ^ (key >>> 32))" : "(int) key"
                   ant.copy(todir: outputDir) {
                     fileset(dir: templateDir) {
                       include(name: "**/*.template")
@@ -157,6 +157,7 @@
                       filter(token: "K", value: keyName)
                       filter(token: "k", value: keyPrimitive)
                       filter(token: "O", value: keyObject)
+                      filter(token: "HASH_CODE", value: hashCodeFn)
                     }
                     regexpmapper(from: replaceFrom, to: replaceTo)
                   }
