--- a/microbench/pom.xml
+++ b/microbench/pom.xml
@@ -73,13 +73,18 @@
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-core</artifactId>
-      <version>0.9</version>
+      <version>1.7.1</version>
     </dependency>
     <dependency>
       <groupId>org.openjdk.jmh</groupId>
       <artifactId>jmh-generator-annprocess</artifactId>
-      <version>0.9</version>
+      <version>1.7.1</version>
       <scope>provided</scope>
+    </dependency>
+    <dependency>
+      <groupId>uk.co.real-logic</groupId>
+      <artifactId>Agrona</artifactId>
+      <version>0.1</version>
     </dependency>
   </dependencies>
 
