Adding basic benchmarks for IntObjectHashMap
Motivation:

It needs to be fast :)

Modifications:

Added a simple benchmark to the microbench module.

Result:

Yay, benchmarks!

--- a/microbench/pom.xml
+++ b/microbench/pom.xml
@@ -81,6 +81,11 @@
       <version>1.7.1</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>uk.co.real-logic</groupId>
+      <artifactId>Agrona</artifactId>
+      <version>0.1</version>
+    </dependency>
   </dependencies>
 
   <build>
