--- a/common/pom.xml
+++ b/common/pom.xml
@@ -54,6 +54,11 @@
       <artifactId>log4j</artifactId>
       <optional>true</optional>
     </dependency>
+    <dependency>
+	  <groupId>commons-lang</groupId>
+  	  <artifactId>commons-lang</artifactId>
+      <version>2.6</version>
+    </dependency>
   </dependencies>
 </project>
 
