--- a/codec-mqtt/pom.xml
+++ b/codec-mqtt/pom.xml
@@ -20,7 +20,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta5-SNAPSHOT</version>
+    <version>4.1.0.Beta5</version>
   </parent>
 
   <artifactId>netty-codec-mqtt</artifactId>
