--- a/transport-udt/pom.xml
+++ b/transport-udt/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>io.netty</groupId>
     <artifactId>netty-parent</artifactId>
-    <version>4.1.0.Beta5-SNAPSHOT</version>
+    <version>4.1.0.Beta5</version>
   </parent>
 
   <artifactId>netty-transport-udt</artifactId>
