Remove the verbose:gc flag from the build
Motivation:

When a faulty never-ending test keeps producing a lot of garbage doing
nothing but generating CPU load, our CI fails to detect the stalled
build, because it determines the 'inactivity time' from console
activity and GC keeps producing console output.

Modifications:

Remove the -verbose:gc flag from pom.xml

Result:

Stalled builds are terminated by our CI server.

--- a/pom.xml
+++ b/pom.xml
@@ -595,7 +595,7 @@
     </argLine.common>
     <!-- Default to ALPN. Then classpath is used to refine selection. See forcenpn profile to force NPN -->
     <argLine.bootcp>-Xbootclasspath/p:${jetty.alpn.path}</argLine.bootcp>
-    <argLine.leak>-verbose:gc</argLine.leak> <!-- Overridden when 'leak' profile is active -->
+    <argLine.leak>-D_</argLine.leak> <!-- Overridden when 'leak' profile is active -->
     <argLine.coverage>-D_</argLine.coverage> <!-- Overridden when 'coverage' profile is active -->
   </properties>
 
